<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/pop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_take_photo"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="20dip"
                android:background="@color/main_color"
                android:text="@string/take_photo"
                android:onClick="takePhoto"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_pick_photo"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip"
                android:background="@color/main_color"
                android:onClick="pickPhoto"
                android:text="@string/pick_photo"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:onClick="onCancel"
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="15dip"
                android:background="@color/main_color"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</layout>