<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="couponNum"
            type="String" />
        <variable
            name="couponName"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            app:srcCompat="@mipmap/pop_coupon" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_enter"
                android:textColor="@color/pop_balck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{couponNum}"
                android:textColor="@color/main_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{couponName}"
                android:textColor="@color/pop_balck" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            app:srcCompat="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coupon_can"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/canl"
                android:textColor="@color/gray_text" />

            <TextView
                android:id="@+id/coupon_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/enter"
                android:textColor="@color/pop_balck" />
        </LinearLayout>
    </LinearLayout>

</layout>