<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="setLock"
            type="com.lhkj.cgjservice.lock.SetLock"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bak">

        <include
            android:id="@+id/include2"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout

            android:id="@+id/linearLayout9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sendmsg"
                android:textColor="@color/gray_text"/>

            <!--<com.lhkj.cgj.spirit.IosLikeToggleButton-->
            <!--android:id="@+id/tog_button"-->
            <!--android:layout_width="54dp"-->
            <!--android:layout_height="32dp"-->
            <!--android:onClick="@{()->setLock.sendMsg()}"-->
            <!--android:padding="4dp"-->
            <!--app:on_color="@color/main_color" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.cleanCache()}"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/ccache"
                android:textColor="@color/gray_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="11dp"
                app:srcCompat="@mipmap/icon_right"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.about()}"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/about"
                android:textColor="@color/gray_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="11dp"
                app:srcCompat="@mipmap/icon_right"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.edition()}"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/edition"
                android:textColor="@color/gray_text"/>

            <TextView
                android:id="@+id/mine_banben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:text="1.0"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.exit()}"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/exit"
            android:textColor="@color/main_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.changeOilPrint()}"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/oil_print"
                android:textColor="@color/gray_text"/>

            <Switch
                android:id="@+id/switch_oil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="@{()->setLock.changeOilPrint()}"
                android:padding="11dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.changeShangPinPring()}"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout16">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/shangpin_print"
                android:textColor="@color/gray_text"/>

            <Switch
                android:id="@+id/switch_shangpin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="@{()->setLock.changeShangPinPring()}"
                android:padding="11dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{()->setLock.goToPrint()}"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/dui_print"
                android:textColor="@color/gray_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="11dp"
                app:srcCompat="@mipmap/icon_right"/>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</layout>