<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <data>
        <import type="android.view.View"/>
        <variable
            name="myCardLock"
            type="com.lhkj.cgjservice.lock.MyCardLock"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bak">

        <include
            android:id="@+id/include5"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.bigkoo.convenientbanner.ConvenientBanner
            android:id="@+id/card_ims"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/include5" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/card_ims">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/select_red"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{(view)->myCardLock.oilCard(view)}"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/life"
                    android:textColor="@color/main_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{(view)->myCardLock.shopCard(view)}"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/cars"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{(view)->myCardLock.payCard(view)}"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/customized"
                    android:textColor="@color/gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{(view)->myCardLock.carCard(view)}"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/customized"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <ListView
                android:id="@+id/card_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:scrollbars="none"
                app:adapter="@{myCardLock.cardAdapter}" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</layout>